--- a/app/styles/keratin/utilities/dropdown.scss
+++ b/app/styles/keratin/utilities/dropdown.scss
@@ -19,6 +19,18 @@
       svg {
         transform: rotate(180deg);
       }
+
+      @media screen and (max-width: $width-md) {
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          bottom: -5px;
+          width: 30px;
+          height: 4px;
+          background: var(--white);
+        }
+      }
     }
 
     .dropdown-menu {
@@ -57,4 +69,22 @@
   border-radius: var(--border-radius) 0 var(--border-radius) var(--border-radius);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.04), 0 1px 1px 0 rgba(0, 0, 0, 0.06);
   overflow: hidden;
+
+  @media screen and (max-width: $width-md) {
+    top: calc(100% + 4px);
+    right: auto;
+    left: 0;
+    border-radius: 0 var(--border-radius) var(--border-radius) var(--border-radius);
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: -4px;
+      left: 0;
+      width: 30px;
+      height: 4px;
+      background: var(--white);
+    }
+  }
 }
