--- a/app/styles/keratin/utilities/dropdown.scss
+++ b/app/styles/keratin/utilities/dropdown.scss
@@ -21,15 +21,7 @@
       }
 
       @media screen and (max-width: $width-md) {
-        &::after {
-          content: "";
-          display: block;
-          position: absolute;
-          bottom: -5px;
-          width: 30px;
-          height: 4px;
-          background: var(--white);
-        }
+        box-shadow: 0 4px 0 var(--white), 0 2px 4px 0 rgba(0, 0, 0, 0.04), 0 1px 1px 0 rgba(0, 0, 0, 0.06);
       }
     }
 
