--- a/app/templates/components/comparison-icon.hbs
+++ b/app/templates/components/comparison-icon.hbs
@@ -1,5 +1,5 @@
-{{#if hasComparison}}
-  {{inline-svg "comparison-icon" class=svgClassName}}
+{{#if noComparisonsHaveDiffs}}
+  {{inline-svg "no-comparison-icon"}}
 {{else}}
-  {{inline-svg "no-comparison-icon" class=svgClassName}}
+  {{inline-svg "comparison-icon"}}
 {{/if}}
