--- a/app/styles/components/_build_header.scss
+++ b/app/styles/components/_build_header.scss
@@ -1,21 +1,3 @@
-.BuildHeader {
-  position: relative;
-  margin: 20px 15px 15px;
-}
-
-.BuildOverview,
-.BuildOverviewInfo {
-  h1 {
-    font-size: 24px;
-  }
-
-  h2 {
-    font-size: 18px;
-    font-weight: normal;
-  }
-
-  h1,
-  h2 {
-    margin: 0;
-  }
+.build-header {
+  box-shadow: inset 4px 0 0 var(--status-color, transparent);
 }
