--- a/app/templates/components/build-info-dropdown.hbs
+++ b/app/templates/components/build-info-dropdown.hbs
@@ -1,4 +1,4 @@
-<button {{action "toggleModal"}} id="BuildInfo" class="Button Button--small u-pull-right">
+<button {{action "toggleModal"}} id="BuildInfo" class="btn btn--small">
   Build Info
 </button>
 {{#if isShowingModal}}
