text color utility class based on status color

--- a/app/templates/components/build-overview-info.hbs
+++ b/app/templates/components/build-overview-info.hbs
@@ -1,6 +1,6 @@
 <div class="">
   <div class="f2 lh-1 text-weight-semibold mb-1">
-    Build <span class="text-mono text-purple">{{build.buildNumber}}</span>
+    Build <span class="text-mono status-text">{{build.buildNumber}}</span>
     {{!-- {{build-info-dropdown build=build}} --}}
   </div>
   {{#if build.isGithubLinked}}
