--- a/app/templates/components/build-card.hbs
+++ b/app/templates/components/build-card.hbs
@@ -36,43 +36,41 @@
       {{/if}}
     </div>
   </div>
-  <div>
-    <div class="flex align-center">
-      {{#if (or build.isPending build.isProcessing)}}
-        {{inline-svg "loader-icon" class="mr-2"}}
+  <div class="flex align-center">
+    {{#if (or build.isPending build.isProcessing)}}
+      {{inline-svg "loader-icon" class="mr-2"}}
+    {{else if build.isFailed}}
+      {{inline-svg "null-comparison-icon" class="mr-2"}}
+    {{else if build.hasNoDiffs}}
+      {{inline-svg "no-comparison-icon" class="mr-2"}}
+    {{else if build.isApproved}}
+      {{inline-svg "comparison-approved-icon" class="mr-2"}}
+    {{else}}
+      {{inline-svg "comparison-icon" class="mr-2"}}
+    {{/if}}
+    <div>
+      {{#if build.isPending}}
+        <span class="f6 text-weight-semibold text-light">Receiving Build</span>
+      {{else if build.isProcessing}}
+        <span class="f6 text-weight-semibold text-light">Processing snapshots</span>
       {{else if build.isFailed}}
-        {{inline-svg "null-comparison-icon" class="mr-2"}}
-      {{else if build.hasNoDiffs}}
-        {{inline-svg "no-comparison-icon" class="mr-2"}}
+        <span class="text-weight-semibold text-light">{{build.failureReasonHumanized}}</span>
       {{else}}
-        {{inline-svg "comparison-icon" class="mr-2"}}
+        <div class="no-wrap">
+          {{#if build.hasDiffs}}
+            <strong>{{build.totalComparisonsDiff}}</strong>
+            <span class="f6 text-light text-weight-semibold">{{pluralize build.totalComparisonsDiff "visual diff" without-count=true}}</span>
+          {{else}}
+            <strong>0</strong>
+            <span class="f6 text-light text-weight-semibold">visual diffs</span>
+          {{/if}}
+        </div>
+        <div class="no-wrap">
+          <strong>{{build.totalComparisonsFinished}}</strong>
+          <span class="f6 text-light text-weight-semibold">{{pluralize build.totalComparisonsFinished "total snapshot" without-count=true}}</span>
+        </div>
       {{/if}}
-      <div>
-        {{#if build.isPending}}
-          <span class="f6 text-weight-semibold text-light">Receiving Build</span>
-        {{else if build.isProcessing}}
-          <span class="f6 text-weight-semibold text-light">Processing snapshots</span>
-        {{else if build.isFailed}}
-          <span class="text-weight-semibold text-light">{{build.failureReasonHumanized}}</span>
-        {{else}}
-          <div class="no-wrap">
-            {{#if build.hasDiffs}}
-              <strong>{{build.totalComparisonsDiff}}</strong>
-              <span class="f6 text-light text-weight-semibold">{{pluralize build.totalComparisonsDiff "visual diff" without-count=true}}</span>
-            {{else}}
-              <strong>0</strong>
-              <span class="f6 text-light text-weight-semibold">visual diffs</span>
-            {{/if}}
-          </div>
-          <div class="no-wrap">
-            <strong>{{build.totalComparisonsFinished}}</strong>
-            <span class="f6 text-light text-weight-semibold">{{pluralize build.totalComparisonsFinished "total snapshot" without-count=true}}</span>
-          </div>
-        {{/if}}
-      </div>
     </div>
   </div>
-  <div>
-    <div class="status-pill is-{{dasherize build.state}} is-{{if build.isFinished (dasherize build.reviewState)}}" data-test-build-state>{{build.buildStatusLabel}}</div>
-  </div>
+  <div class="status-pill is-{{dasherize build.state}} is-{{if build.isFinished (dasherize build.reviewState)}}" data-test-build-state>{{build.buildStatusLabel}}</div>
 </div>
