remove loader from icon set bc freakout animation

--- a/app/templates/components/comparison-icon.hbs
+++ b/app/templates/components/comparison-icon.hbs
@@ -1,7 +1,5 @@
 <figure class="svg-container">
-  {{#if (or build.isPending build.isProcessing)}}
-    {{inline-svg "loader-icon"}}
-  {{else if build.isFailed}}
+  {{#if build.isFailed}}
     {{inline-svg "null-comparison-icon"}}
   {{else if build.hasNoDiffs}}
     {{inline-svg "no-comparison-icon"}}
