--- a/app/templates/components/build-overview.hbs
+++ b/app/templates/components/build-overview.hbs
@@ -1,72 +1,44 @@
 <div class="grid col-auto gap-1 align-center">
   {{! TODO: this needs a complete revamp to rely on build.reviewState and reviewStateReason. }}
-  {{comparison-icon build=build}}
-  {{#if build.isPending}}
-    Receiving build
-    Hang tight&hellip;
-  {{else if build.isProcessing}}
-    <div class="f2 lh-1 text-weight-semibold">Processing visual differences</div>
-    <div class="f5 text-weight-semibold text-light">Hang tight&hellip;</div>
-  {{else if build.isFinished}}
-    {{#if build.isApproved}}
-      {{#if build.hasNoDiffs}}
-        <div class="f2 lh-1 text-weight-semibold">No visual diffs</div>
-      {{else}}
-        <div class="f2 lh-1 text-weight-semibold">All diffs approved</div>
-      {{/if}}
-    {{else if build.hasDiffs}}
-      <div class="f2 lh-1 text-weight-semibold">{{pluralize build.totalSnapshotsUnreviewed "unreviewed changes"}}</div>
-    {{/if}}
-  {{else if build.isFailed}}
-    This build has failed
-  {{else if build.isExpired}}
-    This build has expired
+  {{#if (or build.isPending build.isProcessing)}}
+    {{inline-svg "loader-icon"}}
+  {{else}}
+    {{comparison-icon build=build}}
   {{/if}}
+  <div class="f2 lh-1 text-weight-semibold">
+    {{#if build.isPending}}
+      Receiving build
+    {{else if build.isProcessing}}
+      Processing visual differences
+    {{else if build.isFinished}}
+      {{#if build.isApproved}}
+        {{#if build.hasNoDiffs}}
+          No visual diffs
+        {{else}}
+          All diffs approved
+        {{/if}}
+      {{else if build.hasDiffs}}
+        {{pluralize build.totalSnapshotsUnreviewed "unreviewed change"}}
+      {{/if}}
+    {{else if build.isFailed}}
+      This build has failed
+    {{else if build.isExpired}}
+      This build has expired
+    {{/if}}
+  </div>
 </div>
-<div class="f5 text-weight-semibold">
-  {{#if build.isFinished}}
+<div class="f5 text-weight-semibold text-light">
+  {{#if (or build.isPending build.isProcessing)}}
+    Hang tight&hellip;
+  {{else if build.isFinished}}
     <div>
       {{#if build.isApproved}}
-        <span class="text-light">{{moment-from-now build.approvedAt interval=60000}}</span>
+        {{moment-from-now build.approvedAt interval=60000}}
       {{else}}
-        <span class="text-light">in</span> {{build.totalSnapshots}} <span class="text-light">total snapshots</span>
+        in <span class="text-dark">{{build.totalSnapshots}}</span> total snapshots
       {{/if}}
     </div>
   {{else if build.isFailed}}
-    <div>{{build.failureReasonHumanized}}.</div>
-  {{/if}}
-</div>
-
-<div class="BuildOverview-info">
-  {{#if build.isPending}}
-    <p>
-      This build has not finished receiving data from your CI service or client. If this has been pending for a while, your client may have failed to upload or finalize all snapshots. This build can be safely ignored, it will not be used as a baseline for visual diffs.
-    </p>
-  {{else if build.isFailed}}
-    {{#if (eq build.failureReason 'missing_resources')}}
-      <p>Your CI service or client failed to correctly upload build and snapshot resources.</p>
-      <p>This build can be safely ignored, it will not be used as a baseline for visual diffs. If these failures happen frequently, check your CI or client logs for failures.</p>
-    {{/if}}
-    {{#if (eq build.failureReason 'no_snapshots')}}
-      <p>No snapshots were uploaded to this build, so there was nothing to compare.</p>
-      <p>This could happen if your tests failed in your CI environment and nothing was uploaded to Percy. This build can be safely ignored, it will not be used as a baseline for visual diffs. If these failures happen frequently, check your CI or client logs for failures.</p>
-    {{/if}}
-    {{#if (eq build.failureReason 'render_timeout')}}
-      <p>Some snapshots in this build took too long to render even after multiple retries.</p>
-      <p>This can happen in rare cases when a page loads an asset that takes too long and hangs the Percy renderer. We have automatically recorded this error and will look into it, but feel free to <a href="#" {{action showSupport}} data-test-build-overview-show-support>reach out</a> and we can help get this fixed.</p>
-    {{/if}}
-  {{else if build.isExpired}}
-    {{#if build.project.isEnabled}}
-      <p>
-        Build history on the <strong>{{build.project.organization.subscription.plan.name}}</strong> is limited to <strong>{{build.project.organization.subscription.plan.historyLimitDays}} days</strong>.
-      </p>
-      <p>
-        You can easily {{#link-to "organizations.organization.billing" build.project.organization.slug}}upgrade your plan{{/link-to}} for more build history.
-      </p>
-    {{else}}
-      <p>
-        The <strong>{{build.project.name}}</strong> project is not enabled.
-      </p>
-    {{/if}}
+    <div>{{build.failureReasonHumanized}}</div>
   {{/if}}
 </div>
