comparison icon refactor

--- a/app/templates/components/comparison-icon.hbs
+++ b/app/templates/components/comparison-icon.hbs
@@ -1,5 +1,7 @@
 <figure class="svg-container">
-  {{#if build.isFailed}}
+  {{#if (or build.isPending build.isProcessing)}}
+    {{inline-svg "loader-icon"}}
+  {{else if build.isFailed}}
     {{inline-svg "null-comparison-icon"}}
   {{else if build.hasNoDiffs}}
     {{inline-svg "no-comparison-icon"}}
