build info dropdown WIP

--- a/app/templates/components/build-info-dropdown.hbs
+++ b/app/templates/components/build-info-dropdown.hbs
@@ -6,10 +6,10 @@
                   hasOverlay=false
                   clickOutsideToClose=true
                   translucentOverlay=true
-                  targetAttachment="bottom right"
-                  attachment="top right"
+                  targetAttachment="bottom left"
+                  attachment="top left"
                   tetherTarget="#BuildInfo"
-                  containerClass="BuildInfoDropdown-modal"
+                  containerClass="BuildInfoDropdown-modal rounded"
                   renderInPlace=renderInPlace
                   build=build}}
 
