--- a/app/styles/components/_build_info_dropdown.scss
+++ b/app/styles/components/_build_info_dropdown.scss
@@ -13,7 +13,7 @@
   .fa-caret-up {
     position: absolute;
     top: -14px;
-    right: 18px;
+    left: 18px;
     padding: 1px 5px 0;
     font-size: 4rem;
     line-height: 13px;
