build info dropdown

--- a/app/styles/keratin/utilities/status.scss
+++ b/app/styles/keratin/utilities/status.scss
@@ -34,6 +34,6 @@
   --status-background-color: var(--gray-100) !important;
 }
 
-.status-text {
+.text-status {
   color: var(--status-text-color, var(--dark-text-color)) !important;
 }
