--- a/app/templates/components/build-overview-info.hbs
+++ b/app/templates/components/build-overview-info.hbs
@@ -1,9 +1,9 @@
 <div class="">
-  <div class="f2 lh-1 text-weight-semibold mb-1">
-    Build <span class="text-mono status-text">{{build.buildNumber}}</span>
-    <div class="d-inline-block">
-      {{build-info-dropdown build=build}}
+  <div class="flex align-center f2 lh-1 text-weight-semibold mb-1">
+    <div class="text-light">
+      Build <span class="text-mono text-status mr-1">{{build.buildNumber}}</span>
     </div>
+    {{build-info-dropdown build=build}}
   </div>
   <div class="grid col-auto gap-1 align-center">
     {{#if build.commit}}
