test adjustment for new location

--- a/app/templates/components/build-header.hbs
+++ b/app/templates/components/build-header.hbs
@@ -1,7 +1,7 @@
 <div class="build-header flex justify-between align-center py-3 pr-2 pl-3 is-{{dasherize build.state}} is-{{if build.isFinished (dasherize build.reviewState)}}">
   {{build-overview-info build=build}}
   <div class="text-right">
-    {{build-overview build=build showSupport=showSupport}}
+    {{build-overview build=build}}
   </div>
 </div>
 
